added thread-safe collection storage and thread management via the executor service